FIXED: Fix an issue where center aligned image blocks would cause their images to be stretched on iOS
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@30929 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/image-box/_common.scss
+++ b/src/blocks/image-box/_common.scss
@@ -43,6 +43,7 @@
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 }
 
